--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/nodemailer": "^7.0.5",
     "apexcharts": "^4.7.0",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.2",
     "drift-zoom": "^1.5.1",
     "gsap": "^3.13.0",
     "next": "15.5.9",
+    "nodemailer": "^7.0.12",
     "odometer": "^0.4.8",
     "photoswipe": "^5.4.4",
     "rc-slider": "^11.1.8",
